# typerust

./: .dockerignore  .gitignore  Dockerfile  fly.dev.toml  fly.production.toml  justfile
.github/workflows/: deploy.prod.yml  deploy.yml
formatter/: Cargo.toml  Dockerfile  LICENSE_MIT  README.md
formatter/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: ActionButton.svelte  App.svelte  ButtonPanel.svelte  Editor.svelte  Error.svelte  Output.svelte  code.ts  const.ts  response.ts  vite-env.d.ts
frontend/src/assets/: some.css
md/: about.md
server/: .gitignore  Cargo.toml
server/public/: about.md  global.css  index.html
server/public/assets/: formatter_bg.1471ca7a.wasm  index.5ce90726.js  index.75371d95.css
server/src/: error.rs  handler.rs  main.rs  static_server.rs  telemetry.rs  wasm.rs
templates/: base.html
