[package]
name = "typerust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
axum = "0.5.4"
axum-extra = { version = "0.3.3", features = ["spa"] }
bytes = "1.1.0"
bytesize = "1.1.0"
cap-std = "0.24.3"
dotenv = "0.15.0"
envy = "0.4.2"
http-body = "0.4.5"
include_dir = { version = "0.7.2", features = ["metadata"] }
mime_guess = "2.0.4"
once_cell = "1.10.0"
opentelemetry = { version = "0.17.0", features = ["tokio", "rt-tokio"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tls"] }
pulldown-cmark = { version = "0.9.1", default-features = false }
serde = "1.0.137"
serde_json = "1.0.81"
tempfile = "3.3.0"
tera = { version = "1.15.0", default-features = false }
thiserror = "1.0"
tokio = { version = "1.18.1", features = ["full"] }
tonic = { version = "0.6.2", features = ["tls-roots"] }
tower-http = { version = "0.3.3", features = ["cors", "fs", "set-header", "trace"] }
tracing = { version = "0.1.34", features = ["attributes"] }
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
url = "2.2.2"
wasmtime = { version = "0.36.0", features = ["async"] }
wasmtime-wasi = "0.36.0"

[target.'cfg(target_os = "linux")'.dependencies]
memfile = "0.2.1"
